First pass of Packet with Custom Extractions